mantenimiento-form modificado

--- a/src/app/vehiculo/formulario/formulario.component.html
+++ b/src/app/vehiculo/formulario/formulario.component.html
@@ -180,8 +180,9 @@
           <div class="col-xl-6">
             <mat-form-field class="fs-6" appearance="outline">
               <mat-label>Capacidad Depósito</mat-label>
-              <input type="number" matInput placeholder="Litros" formControlName="capacidadDeposito"
+              <input type="number" matInput formControlName="capacidadDeposito"
                 [(ngModel)]="datosTecnicosInteres.capacidadDeposito" required />
+              <span matSuffix>Litros</span>
             </mat-form-field>
           </div>
 
