--- a/src/app/vehiculo/vehiculos/mantenimiento-form/mantenimiento-form.component.html
+++ b/src/app/vehiculo/vehiculos/mantenimiento-form/mantenimiento-form.component.html
@@ -1,150 +1,232 @@
-<main class="container-fluid">
-    <div class="row" id="lineaInferior">
-        <div class="col-xl-2"></div>
-          <div class="col-xl-8">
-          <h1>{{vehiculo.matricula|uppercase}}</h1>
+<div class="row" id="lineaInferior">
+  <p></p>
+  <p class="fs-2">Nuevo Mantenimiento {{ vehiculo.matricula.toLocaleUpperCase() }}</p>
+</div>
+
+<div class="container mt-auto">
+
+  <form #mantenimientoForm="ngForm" class="was-validated">
+
+    <div class="row justify-content-center">
+
+      <div class="col-xl-4">
+        <label class="form-label fs-5">Kilómetros Mantenimiento</label>
+        <input type="number" class="form-control" name="kilometrosMantenimiento" minlength="1" maxlength="6"
+          [(ngModel)]="mantenimiento.kilometrosMantenimiento" required #kilometrosMantenimiento="ngModel" [ngClass]="{
+              'is-invalid': kilometrosMantenimiento.invalid && (kilometrosMantenimiento.dirty || kilometrosMantenimiento.touched),
+              'is-valid': !kilometrosMantenimiento.invalid
+          }">
+        <div class="text-danger"
+          *ngIf="kilometrosMantenimiento.invalid && (kilometrosMantenimiento.dirty || kilometrosMantenimiento.touched)">
+          <div *ngIf="kilometrosMantenimiento.errors?.['required']">
+            Debe introducir los kilometros del vehiculo en el momento de realización del mantenimiento.
+          </div>
+          <div *ngIf="kilometrosMantenimiento.errors?.['minlength']">
+            El vehiculo debe tener un minimo de 1 km.
+          </div>
         </div>
+      </div>
+
+      <div class="col-xl-4">
+        <label class="form-label fs-5">Fecha Mantenimiento</label>
+        <input type="date" class="form-control" name="fechaMantenimiento" [(ngModel)]="mantenimiento.fechaMantenimiento"
+          required #fechaMantenimiento="ngModel" [ngClass]="{
+            'is-invalid': fechaMantenimiento.invalid && (fechaMantenimiento.dirty || fechaMantenimiento.touched),
+            'is-valid': !fechaMantenimiento.invalid
+        }">
+        <div class="text-danger"
+          *ngIf="fechaMantenimiento.invalid && (fechaMantenimiento.dirty || fechaMantenimiento.touched)">
+          <div *ngIf="fechaMantenimiento.errors?.['required']">
+            Debe introducir la fecha de realización del mantenimiento.
+          </div>
+        </div>
+      </div>
+
     </div>
+
+    <br><br>
+
+    <fieldset class="row justify-content-center">
+
+      <label class="form-label fs-5">Acciones</label>
+
+      <br><br>
+
+      <div class="col-xl-4">
+
+        <div class="form-check fs-6">
+          <input class="form-check-input" type="checkbox" name="liquidoFrenos" id="gridCheck2" value="option2"
+            [(ngModel)]="mantenimiento.liquidoFrenos">
+          <label class="form-check-label" for="gridCheck2">
+            Líquido de Frenos
+          </label>
+        </div>
+
+        <div class="form-check fs-6">
+          <input class="form-check-input" type="checkbox" name="operacionesSistematicas" id="gridCheck1" value="option1"
+            [(ngModel)]="mantenimiento.operacionesSistematicas">
+          <label class="form-check-label" for="gridCheck1">
+            Operaciones Sistemáticas
+          </label>
+        </div>
+
+        <div class="form-check fs-6">
+          <input class="form-check-input" type="checkbox" name="filtroAire" id="gridCheck3" value="option3"
+            [(ngModel)]="mantenimiento.filtroAire">
+          <label class="form-check-label" for="gridCheck3">
+            Filtro de Aire
+          </label>
+        </div>
+
+        <div class="form-check fs-6">
+          <input class="form-check-input" type="checkbox" name="filtroAireHabitaculo" id="gridCheck4" value="option4"
+            [(ngModel)]="mantenimiento.filtroAireHabitaculo">
+          <label class="form-check-label" for="gridCheck4">
+            Filtro de Aire Habitáculo
+          </label>
+        </div>
+
+        <div class="form-check fs-6">
+          <input class="form-check-input" type="checkbox" name="filtroCombustible" id="gridCheck5" value="option5"
+            [(ngModel)]="mantenimiento.filtroCombustible">
+          <label class="form-check-label" for="gridCheck5">
+            Filtro Combustible
+          </label>
+        </div>
+
+        <div class="form-check fs-6">
+          <input class="form-check-input" type="checkbox" name="filtroAntipolen" id="gridCheck6" value="option6"
+            [(ngModel)]="mantenimiento.filtroAntipolen">
+          <label class="form-check-label" for="gridCheck6">
+            Filtro Antipolen
+          </label>
+        </div>
+
+        <div class="form-check fs-6">
+          <input class="form-check-input" type="checkbox" name="correaDistribucion" id="gridCheck7" value="option7"
+            [(ngModel)]="mantenimiento.correaDistribucion">
+          <label class="form-check-label" for="gridCheck7">
+            Correa de Distribución
+          </label>
+        </div>
+
+        <div class="form-check fs-6">
+          <input class="form-check-input" type="checkbox" name="kitDistribucion" id="gridCheck8" value="option8"
+            [(ngModel)]="mantenimiento.kitDistribucion">
+          <label class="form-check-label" for="gridCheck8">
+            Kit de Distribución
+          </label>
+        </div>
+      </div>
+
+      <div class="col-xl-4">
+
+        <div class="form-check fs-6">
+          <input class="form-check-input" type="checkbox" name="reglajePoyectores" id="gridCheck9" value="option9"
+            [(ngModel)]="mantenimiento.reglajeProyectores">
+          <label class="form-check-label" for="gridCheck9">
+            Reglaje Proyectores
+          </label>
+        </div>
+
+        <div class="form-check fs-6">
+          <input class="form-check-input" type="checkbox" name="pHLiquidoRefrigeracion" id="gridCheck10"
+            value="option10" [(ngModel)]="mantenimiento.pHLiquidoRefrigeracion">
+          <label class="form-check-label" for="gridCheck10">
+            Ph Líquido Refrigeración
+          </label>
+        </div>
+
+        <div class="form-check fs-6">
+          <input class="form-check-input" type="checkbox" name="liquidoRefrigeracion" id="gridCheck11" value="option11"
+            [(ngModel)]="mantenimiento.liquidoRefrigeracion">
+          <label class="form-check-label" for="gridCheck11">
+            Líquido Refrigeración
+          </label>
+        </div>
+
+        <div class="form-check fs-6">
+          <input class="form-check-input" type="checkbox" name="correaArrastreAccesorios" id="gridCheck12"
+            value="option12" [(ngModel)]="mantenimiento.correaArrastreAccesorios">
+          <label class="form-check-label" for="gridCheck12">
+            Correa Arrastre Accesorios
+          </label>
+        </div>
+
+        <div class="form-check fs-6">
+          <input class="form-check-input" type="checkbox" name="kitCorreaArrastreAccesorios" id="gridCheck13"
+            value="option13" [(ngModel)]="mantenimiento.kitCorreaArrastreAccesorios">
+          <label class="form-check-label" for="gridCheck13">
+            Kit Correa Arrastre Accesorios
+          </label>
+        </div>
+
+        <div class="form-check fs-6">
+          <input class="form-check-input" type="checkbox" name="anticongelante" id="gridCheck14" value="option14"
+            [(ngModel)]="mantenimiento.anticongelante">
+          <label class="form-check-label" for="gridCheck14">
+            Anticongelante
+          </label>
+        </div>
+
+        <div class="form-check fs-6">
+          <input class="form-check-input" type="checkbox" name="aceiteTransmision" id="gridCheck15" value="option15"
+            [(ngModel)]="mantenimiento.aceiteTransmision">
+          <label class="form-check-label" for="gridCheck15">
+            Aceite Transmisión
+          </label>
+        </div>
+
+        <div class="form-check fs-6">
+          <input class="form-check-input" type="checkbox" name="bujiasEncencido" id="gridCheck16" value="option16"
+            [(ngModel)]="mantenimiento.bujiasEncendido">
+          <label class="form-check-label" for="gridCheck16">
+            Bujías Encendido
+          </label>
+        </div>
+
+      </div>
+
+    </fieldset>
+
+    <br><br>
+
+    <div class="row justify-content-center">
+
+      <div class="col-xl-8">
+
+        <label class="form-label fs-5">Observaciones</label>
+
+        <textarea type="text" class="form-control" rows="4" name="observaciones" minlength="3" maxlength="500"
+          [(ngModel)]="mantenimiento.observaciones" #observaciones="ngModel" [ngClass]="{
+              'is-invalid': observaciones.invalid && (observaciones.dirty || observaciones.touched),
+              'is-valid': !observaciones.invalid
+          }"></textarea>
+
+        <div class="text-danger" *ngIf="observaciones.invalid && (observaciones.dirty || observaciones.touched)">
+          <div *ngIf="observaciones.errors?.['required']">
+            Debe introducir la descripcion de la operacion.
+          </div>
+          <div *ngIf="observaciones.errors?.['minlength']">
+            La descripcion de la operacion debe tener un minimo de 3 caracteres y un máximo de 500.
+          </div>
+        </div>
+
+      </div>
+
+    </div>
+
+    <br><br><br>
+
+    <div>
+      <button class="btn btn-success" type="submit" (click)="onAddMantenimiento()"
+        [disabled]="!mantenimientoForm.form.valid">Aceptar</button>
+      &nbsp;&nbsp;&nbsp;
+      <button class="btn btn-danger" name="cancelarMantenimiento" routerLink="/">Cancelar</button>
+    </div>
+
     <br>
-    <h1>NUEVO MANTENIMIENTO</h1>
-    <form>
-        <div class="row mb-3">
-          <label for="inputdate1" class="col-sm-2 col-form-label">Fecha Realización:</label>
-          <div class="col-sm-10">
-            <input type="date" class="form-control" name="fechaRealizacion" id="inputdate1" [(ngModel)]="mantenimiento.fechaMantenimiento" 
-            required>
-          </div>
-        </div>
-        <div class="row mb-3">
-          <label for="inputkilometros1" class="col-sm-2 col-form-label">Kilómetros:</label>
-          <div class="col-sm-10">
-            <input type="number" class="form-control" name="kilometrosMantenimiento" id="inputkilometros1" [(ngModel)]="mantenimiento.kilometrosMantenimiento" required>
-          </div>
-        </div>
-        <fieldset class="row mb-3">
-          <legend class="col-form-label col-sm-2 pt-0">Acciones:</legend>
-          <div class="col-sm-4">
-            <div class="form-check">
-              <input class="form-check-input" type="checkbox" name="operacionesSistematicas" id="gridCheck1" value="option1" [(ngModel)]="mantenimiento.operacionesSistematicas" required>
-              <label class="form-check-label" for="gridCheck1">
-                Operaciones sistemáticas
-              </label>
-            </div>
-            <div class="form-check">
-              <input class="form-check-input" type="checkbox" name="liquidoFrenos" id="gridCheck2" value="option2" [(ngModel)]="mantenimiento.liquidoFrenos" required>
-              <label class="form-check-label" for="gridCheck2">
-                Líquido de Frenos
-              </label>
-            </div>
-            <div class="form-check">
-                <input class="form-check-input" type="checkbox" name="filtroAire" id="gridCheck3" 
-                value="option3" [(ngModel)]="mantenimiento.filtroAire" required>
-                <label class="form-check-label" for="gridCheck3">
-                  Filtro de Aire
-                </label>
-              </div>
-              <div class="form-check">
-                <input class="form-check-input" type="checkbox" name="filtroAireHabitaculo"
-                 id="gridCheck4" value="option4" [(ngModel)]="mantenimiento.filtroAireHabitaculo" required>
-                <label class="form-check-label" for="gridCheck4">
-                  Filtro de Aire(habitáculo)
-                </label>
-              </div>
-              <div class="form-check">
-                <input class="form-check-input" type="checkbox" name="filtroCombustible" id="gridCheck5" value="option5" [(ngModel)]="mantenimiento.filtroCombustible" required>
-                <label class="form-check-label" for="gridCheck5">
-                  Filtro Combustible
-                </label>
-              </div>
-              <div class="form-check">
-                <input class="form-check-input" type="checkbox" name="filtroAntipolen" 
-                id="gridCheck6" value="option6" [(ngModel)]="mantenimiento.filtroAntipolen" required>
-                <label class="form-check-label" for="gridCheck6">
-                  Filtro Antipolen
-                </label>
-              </div>
-              <div class="form-check">
-                <input class="form-check-input" type="checkbox" name="correaDistribucion" id="gridCheck7" value="option7"
-                 [(ngModel)]="mantenimiento.correaDistribucion" required>
-                <label class="form-check-label" for="gridCheck7">
-                  Correa de Distribución
-                </label>
-              </div>
-              <div class="form-check">
-                <input class="form-check-input" type="checkbox" name="kitDistribucion" id="gridCheck8" value="option8"
-                [(ngModel)]="mantenimiento.kitDistribucion" required>
-                <label class="form-check-label" for="gridCheck8">
-                  Kit de Distribución
-                </label>
-              </div>
-          </div>
-            <div class="col-sm-4">
-              <div class="form-check">
-                <input class="form-check-input" type="checkbox" name="reglajePoyectores" id="gridCheck9" value="option9"
-                [(ngModel)]="mantenimiento.reglajeProyectores" required>
-                <label class="form-check-label" for="gridCheck9">
-                  Reglaje Proyectores
-                </label>
-              </div>
-              <div class="form-check">
-                <input class="form-check-input" type="checkbox" name="pHLiquidoRefrigeracion" id="gridCheck10" value="option10" 
-                [(ngModel)]="mantenimiento.pHLiquidoRefrigeracion" required>
-                <label class="form-check-label" for="gridCheck10">
-                  Ph Líquido Refrigeración
-                </label>
-              </div>
-              <div class="form-check">
-                <input class="form-check-input" type="checkbox" name="liquidoRefrigeracion" id="gridCheck11" value="option11"
-                [(ngModel)]="mantenimiento.liquidoRefrigeracion" required>
-                <label class="form-check-label" for="gridCheck11">
-                  Líquido Refrigeración
-                </label>
-              </div>
-              <div class="form-check">
-                <input class="form-check-input" type="checkbox" name="correaArrastreAccesorios" id="gridCheck12" value="option12"
-                [(ngModel)]="mantenimiento.correaArrastreAccesorios" required>
-                <label class="form-check-label" for="gridCheck12">
-                  Correa Arrastre Accesorios
-                </label>
-              </div>
-              <div class="form-check">
-                <input class="form-check-input" type="checkbox" name="kitCorreaArrastreAccesorios" id="gridCheck13" value="option13"
-                [(ngModel)]="mantenimiento.kitCorreaArrastreAccesorios" required>
-                <label class="form-check-label" for="gridCheck13">
-                  Kit Correa Arrastre Accesorios
-                </label>
-              </div>
-              <div class="form-check">
-                <input class="form-check-input" type="checkbox" name="anticongelante" id="gridCheck14" value="option14"
-                [(ngModel)]="mantenimiento.anticongelante" required>
-                <label class="form-check-label" for="gridCheck14">
-                  Anticongelante
-                </label>
-              </div>
-              <div class="form-check">
-                <input class="form-check-input" type="checkbox" name="aceiteTransmision" id="gridCheck15" value="option15"
-                [(ngModel)]="mantenimiento.aceiteTransmision" required>
-                <label class="form-check-label" for="gridCheck15">
-                  Aceite Transmisión
-                </label>
-              </div>
-              <div class="form-check">
-                <input class="form-check-input" type="checkbox" name="bujiasEncencido" id="gridCheck16" value="option16"
-                [(ngModel)]="mantenimiento.bujiasEncendido" required>
-                <label class="form-check-label" for="gridCheck16">
-                  Bujías Encendido
-                </label>
-              </div>
-          </div>
-        </fieldset>
-        <div class="row">
-        <div class="col-2 mb-3">
-            <label for="exampleFormControlTextarea1" class="form-label"> Observaciones:</label>
-            <textarea class="form-control" name="observaciones" id="observaciones" rows="3" max="250" [(ngModel)]="mantenimiento.observaciones" required></textarea>
-          </div>
-        </div>
-        <button class="btn btn-primary" type="submit" (click)="onAddMantenimiento()">Aceptar</button>
-        <button class="btn btn-primary" name="cancelarMantenimiento" id="cancelarMantenimiento" >Cancelar</button>
-        
-      </form>
-</main>
+
+  </form>
+
+  <br><br>
