sufijos en formulario alta

--- a/src/app/vehiculo/vehiculos/mantenimiento-form/mantenimiento-form.component.html
+++ b/src/app/vehiculo/vehiculos/mantenimiento-form/mantenimiento-form.component.html
@@ -46,9 +46,9 @@
 
     <br><br>
 
-    <fieldset class="row justify-content-center">
+    <fieldset class="row justify-content-center field_set">
 
-      <label class="form-label fs-5">Acciones</label>
+      <legend class="form-label fs-5">Acciones</legend>
 
       <br><br>
 
