--- a/src/app/vehiculo/vehiculos/vehiculo-editar/vehiculo-editar.component.html
+++ b/src/app/vehiculo/vehiculos/vehiculo-editar/vehiculo-editar.component.html
@@ -180,8 +180,9 @@
           <div class="col-xl-6">
             <mat-form-field class="fs-6" appearance="outline">
               <mat-label>Capacidad Depósito</mat-label>
-              <input type="number" matInput placeholder="Litros" formControlName="capacidadDeposito"
+              <input type="number" matInput formControlName="capacidadDeposito"
                 [(ngModel)]="datosTecnicosInteres.capacidadDeposito" required />
+              <span matSuffix>Litros</span>
             </mat-form-field>
           </div>
 
@@ -205,8 +206,9 @@
           <div class="col-xl-6">
             <mat-form-field class="fs-6" appearance="outline">
               <mat-label>Capacidad Carter</mat-label>
-              <input type="number" matInput placeholder="Litros" formControlName="capacidadCarter"
+              <input type="number" matInput formControlName="capacidadCarter"
                 [(ngModel)]="datosTecnicosInteres.capacidadCarter" required />
+              <span matSuffix>Litros</span>
             </mat-form-field>
           </div>
 
@@ -222,16 +224,18 @@
           <div class="col-xl-4">
             <mat-form-field class="fs-6" appearance="outline">
               <mat-label>Presión Delanteros</mat-label>
-              <input type="number" matInput placeholder="bar" formControlName="presionNeumaticosDelanteros"
+              <input type="number" matInput formControlName="presionNeumaticosDelanteros"
                 [(ngModel)]="datosTecnicosInteres.presionNeumaticosDelanteros" required />
+              <span matSuffix>bar</span>
             </mat-form-field>
           </div>
 
           <div class="col-xl-4">
             <mat-form-field class="fs-6" appearance="outline">
               <mat-label>Presión Traseros</mat-label>
-              <input type="number" matInput placeholder="bar" formControlName="presionNeumaticosTraseros"
+              <input type="number" matInput formControlName="presionNeumaticosTraseros"
                 [(ngModel)]="datosTecnicosInteres.presionNeumaticosTraseros" required />
+              <span matSuffix>bar</span>
             </mat-form-field>
           </div>
 
@@ -263,24 +267,27 @@
           <div class="col-xl-3">
             <mat-form-field class="fs-6" appearance="outline">
               <mat-label>Amperios/Hora</mat-label>
-              <input type="number" matInput placeholder="amp/h" formControlName="amperiosHoraBaterias"
+              <input type="number" matInput formControlName="amperiosHoraBaterias"
                 [(ngModel)]="datosTecnicosInteres.amperiosHoraBaterias" required />
+              <span matSuffix>amp/h</span>
             </mat-form-field>
           </div>
 
           <div class="col-xl-3">
             <mat-form-field class="fs-6" appearance="outline">
               <mat-label>Amperaje:</mat-label>
-              <input type="number" matInput placeholder="amp" formControlName="amperajeBaterias"
+              <input type="number" matInput formControlName="amperajeBaterias"
                 [(ngModel)]="datosTecnicosInteres.amperajeBaterias" required />
+              <span matSuffix>amp</span>
             </mat-form-field>
           </div>
 
           <div class="col-xl-3">
             <mat-form-field class="fs-6" appearance="outline">
               <mat-label>Voltaje:</mat-label>
-              <input type="number" matInput placeholder="V" formControlName="voltajeBaterias"
+              <input type="number" matInput formControlName="voltajeBaterias"
                 [(ngModel)]="datosTecnicosInteres.voltajeBaterias" required />
+              <span matSuffix>V</span>
             </mat-form-field>
           </div>
 
